# Nano

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ARC.md  CMakeLists.txt  README.md  TODO.txt  debug.sh
libs/: CMakeLists.txt
shaders/: ClusterCull.glsl  HWRasterizeFS.glsl  HWRasterizeVS.glsl  Init.glsl  NodeAndClusterCull.glsl  Visualize.glsl  build.sh  pbr.frag  pbr.vert  swapchainFS.glsl  swapchainVS.glsl
src/: CMakeLists.txt  application.cpp  application.h  engine.cpp  engine.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/core/: camera.cpp  camera.h  math.h
src/math/: float4.cpp  float4.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h
src/misc/: logger.cpp  logger.h
src/render/: BattleFireVulkan.cpp  Material.cpp  Material.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  StaticMesh.cpp  StaticMesh.h  material.cpp  material.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  rhi.h  static_mesh.cpp  static_mesh.h  vulkan_rhi.cpp  vulkan_rhi.h  window.cpp  window.h
src/render/rhi/: README.md  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor_set.cpp  descriptor_set.h  pipeline.cpp  pipeline.h  rhi.cpp  rhi.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/opengl/: light.cpp  light.h  opengl_renderer.cpp  opengl_renderer.h  pbr_framebuffer.cpp  pbr_framebuffer.h  shader.cpp  shader.h
src/renderer/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utils.cpp  vulkan_utils.h
src/scene/: Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  camera.cpp  camera.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h
src/window/: window.cpp  window.h
src/window/opengl/: opengl_window.cpp  opengl_window.h
src/window/vulkan/: vulkan_window.cpp  vulkan_window.h
